--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 :root {
   /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
@@ -12,37 +13,45 @@
   -moz-osx-font-smoothing: grayscale;
   font-family: "Outfit", sans-serif;
 }
-*{
+
+* {
   font-family: "Outfit", sans-serif;
 }
+
 body {
   margin: 0;
   min-height: 100vh;
   font-family: "Outfit", sans-serif;
   color: var(--text);
 }
- 
+
 /* Style the scrollbar track */
 ::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
+  width: 8px;
+  /* Width of the scrollbar */
 }
 
 /* Style the part of the scrollbar not covered by the thumb */
 ::-webkit-scrollbar-track {
-    background: var(--background); /* Background color of the track */
+  background: var(--background);
+  /* Background color of the track */
 }
 
 /* Style the draggable part of the scrollbar */
 ::-webkit-scrollbar-thumb {
-    background: #179be7; /* Color of the thumb */
-    border-radius: 10px; /* Optional: Adds rounded corners to the thumb */
+  background: #179be7;
+  /* Color of the thumb */
+  border-radius: 10px;
+  /* Optional: Adds rounded corners to the thumb */
 }
 
 /* Optional: Style the thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: var(--background); /* Change color when hovered */
+  background: var(--background);
+  /* Change color when hovered */
 }
 
 ::-webkit-scrollbar {
-  height: 4px; /* Width of the horizontal scrollbar */
+  height: 4px;
+  /* Width of the horizontal scrollbar */
 }
