--- a/frontend/src/components/appLayout/Layout.css
+++ b/frontend/src/components/appLayout/Layout.css
@@ -32,7 +32,10 @@
 .app-name {
     font-size: 24px;
     font-weight: 900;
-    margin: 0px 5px;
+    /* margin: 0px 5px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .app-body {
