--- a/frontend/src/pages/qrCode/qrCode.css
+++ b/frontend/src/pages/qrCode/qrCode.css
@@ -2,3 +2,9 @@
     color: var(--text);
   }
   
+  .text-center{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
