history page and bills page css

--- a/frontend/src/components/appLayout/Layout.css
+++ b/frontend/src/components/appLayout/Layout.css
@@ -140,6 +140,7 @@ p {
 .list-items.active .link {
     background-color: var(--menu-hover);
     box-sizing: border-box;
+    color: white;
 }
 
 .list-items.active .custom-sidebar-icon,
