--- a/frontend/src/components/QRScanner.css
+++ b/frontend/src/components/QRScanner.css
@@ -2,10 +2,10 @@
     padding: 20px;
     margin: auto;
     font-family: Arial, sans-serif;
-    background-color: var(--background-1);
+    /* background-color: var(--background-1); */
     border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     display: flex;
+    gap: 10px;
 }
 
 .qr-title {
@@ -18,17 +18,22 @@
 .qr-reader {
     margin: 0 auto 20px auto;
     width: 300px;
-    border: 2px solid #ccc;
     padding: 10px;
-    border-radius: 8px;
+    border-radius: 4px;
     flex: 1;
-    
+    background-color: var(--background-1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
 }
 
-.qr-reader-table{
-    padding: 10px;
-    border-radius: 8px;
-    flex: 1;
+.qr-reader-table {
+    border-radius: 4px;
+    flex: 2;
+    /* background-color: var(--background-1); */
+    display: flex;
+    flex-direction: column;
+    
+    gap: 10px;
 }
 
 .qr-subtitle {
@@ -59,30 +64,53 @@
     font-weight: bold;
     text-align: right;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 .qr-clear-btn {
     background-color: #e53935;
     color: white;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: none;
     border-radius: 6px;
     cursor: pointer;
     font-size: 16px;
+    margin: 10px;
 }
 
 .qr-clear-btn:hover {
     background-color: #c62828;
 }
 
+.qr-actions{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
 
 
+.qr-form {
+    display: flex;
+    gap: 10px;
+    padding: 10px;
+    background-color: var(--background-1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 4px;
 
+}
+
+.bill-container {
+    background-color: var(--background-1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    border-radius: 4px;
+}
 
 
 .qr-bill-btn {
-    padding: 10px 20px;
+    padding: 5px 10px;
+    font-weight: 500;
     margin: 10px 10px 10px 0;
     border: none;
     border-radius: 4px;
@@ -99,6 +127,11 @@
 .qr-bill-btn {
     background-color: #4CAF50;
     color: white;
+}
+
+.input-box{
+    border-width: 1px;
+    width: 70px;
 }
 
 .qr-clear-btn:hover {
