--- a/frontend/src/pages/Dashboard/Dashboard.css
+++ b/frontend/src/pages/Dashboard/Dashboard.css
@@ -1,12 +1,11 @@
 .dashboard-container {
-    padding: 20px;
+    padding: 10px;
     font-family: 'Segoe UI', sans-serif;
 }
 
 .dashboard-title {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .dashboard-cards {
@@ -14,16 +13,17 @@
     flex-wrap: wrap;
     gap: 10px;
     justify-content: center;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .card {
-    background-color: #f3f3f3;
+    background-color: var(--background-1);
     padding: 20px;
     min-width: 220px;
     border-radius: 10px;
     font-size: 16px;
     text-align: center;
+    flex: 1;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -38,13 +38,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin-bottom: 40px;
+    /* margin-bottom: 10px; */
 }
 
 .chart-container {
-    background: #fff;
+    background: var(--background-1);
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 5px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -85,4 +85,64 @@ td {
         flex-direction: column;
         align-items: center;
     }
+}
+
+
+.dashboard-cards {
+    display: flex;
+    gap: 20px;
+    margin-top: 10px;
+    position: relative;
+}
+
+.card {
+    position: relative;
+    border-radius: 5px;
+    width: 300px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.ribbon {
+    --f: .5em;
+    /* control the folded part */
+    --r: .8em;
+    /* control the ribbon shape */
+
+    position: absolute;
+    top: 10px;
+    left: calc(-1 * var(--f));
+    padding-inline: .5em;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    line-height: 1.8;
+    background: #987F69;
+    border-bottom: var(--f) solid #0005;
+    border-right: var(--r) solid #0000;
+    clip-path:
+        polygon(calc(100% - var(--r)) 0, 0 0, 0 calc(100% - var(--f)),
+            var(--f) 100%, var(--f) calc(100% - var(--f)),
+            calc(100% - var(--r)) calc(100% - var(--f)),
+            100% calc(50% - var(--f) / 2));
+}
+
+.r1 {
+    background: #068267;
+}
+
+.r2 {
+    background: #5089da;
+}
+
+.r3 {
+    background: #e05292;
+}
+
+.chart-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 8px;
 }
