feat: Refactor login and registration pages to improve code structure and maintainability
- Updated import paths for theme toggle component in login and registration pages.
- Refactored state management and API calls in login and registration components.
- Enhanced user feedback with success and error messages during login and registration processes.

feat: Enhance product card component with improved error handling and UI updates

- Added image error handling for QR code display in ProductCard component.
- Improved layout and styling for better user experience.
- Updated action handlers for editing and deleting products.

feat: Implement product deletion functionality in products page

- Added delete functionality for products with confirmation prompts.
- Integrated success and error messages for user feedback on product deletion.

feat: Update backend to support pagination and enhanced querying for bills

- Implemented pagination for fetching bills with query parameters for filtering.
- Added total count of bills in the response for better frontend handling.

feat: Introduce total products summary endpoint in dashboard

- Created a new endpoint to fetch total product statistics including quantity and price.
- Added aggregation logic in the backend to calculate total products and their values.

feat: Implement QR product deletion in backend

- Added functionality to delete QR products with file cleanup for associated QR codes.
- Updated routes to include new delete endpoint for QR products.

chore: Add counter model for automatic bill number generation

- Introduced a Counter model to manage sequential bill numbers.
- Updated Bill model to utilize the Counter for generating unique bill numbers.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,33 +24,23 @@ body {
   color: var(--text);
 }
 
-/* Style the scrollbar track */
 ::-webkit-scrollbar {
-  width: 8px;
-  /* Width of the scrollbar */
+  width: 5px;
 }
 
-/* Style the part of the scrollbar not covered by the thumb */
 ::-webkit-scrollbar-track {
   background: var(--background);
-  /* Background color of the track */
 }
 
-/* Style the draggable part of the scrollbar */
 ::-webkit-scrollbar-thumb {
-  background: #179be7;
-  /* Color of the thumb */
+  background: #b5b6b7;
   border-radius: 10px;
-  /* Optional: Adds rounded corners to the thumb */
 }
 
-/* Optional: Style the thumb on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--background);
-  /* Change color when hovered */
 }
 
 ::-webkit-scrollbar {
   height: 4px;
-  /* Width of the horizontal scrollbar */
 }
