--- a/frontend/src/components/appLayout/Layout.css
+++ b/frontend/src/components/appLayout/Layout.css
@@ -176,3 +176,17 @@ p {
 .logout-button:hover {
     background-color: rgb(232, 63, 63);
 }
+
+.show-on-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 1370px) {
+  .show-on-mobile {
+    display: inline-block;
+  }
+
+  .hide-on-mobile {
+    display: none;
+  }
+}
